[gd_scene load_steps=3 format=3 uid="uid://bl12aunivna08"]

[ext_resource type="Script" uid="uid://bso0mvy6xt7kn" path="res://Main.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://bv3e60w06ckhh" path="res://GraphGuiInput.gd" id="2_uu6xs"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_glv2v")

[node name="VSplitContainer" type="VSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="SaveButton" type="Button" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="AddNodeButton" type="Button" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "Add Node"

[node name="DeleteSelectedEdgeButton2" type="Button" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "Delete Selected Edge"

[node name="DeleteSelectedNodeButton" type="Button" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "Delete Selected Node"

[node name="Label" type="Label" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "             "

[node name="Label2" type="Label" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
text = "Arduino path:"

[node name="ConfigHeader" type="LineEdit" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GraphEdit" type="GraphEdit" parent="VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_uu6xs")

[node name="Overlay" type="Control" parent="VSplitContainer/GraphEdit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -43.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TotalSizeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_gui_input"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/LoadButton" to="." method="_load_file"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/SaveButton" to="." method="_save_file"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/AddNodeButton" to="." method="_on_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/DeleteSelectedEdgeButton2" to="." method="_on_pressed"]
[connection signal="pressed" from="VSplitContainer/HBoxContainer/DeleteSelectedNodeButton" to="." method="_delete_selected_node"]
[connection signal="gui_input" from="VSplitContainer/GraphEdit" to="VSplitContainer/GraphEdit" method="_gui_input"]
[connection signal="node_deselected" from="VSplitContainer/GraphEdit" to="." method="_graph_node_deselected"]
[connection signal="node_selected" from="VSplitContainer/GraphEdit" to="." method="_graph_node_selected"]
